php5.5 in htacces

--- a/.htaccess
+++ b/.htaccess
@@ -70,3 +70,9 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule .* index.php [L]
 #
 ## End - Joomla! core SEF Section.
+
+# Use PHP55 as default
+AddHandler application/x-httpd-php55 .php
+<IfModule mod_suphp.c>
+    suPHP_ConfigPath /opt/php55/lib
+</IfModule>
